--- a/app/src/main/res/layout/activity_weather_detail.xml
+++ b/app/src/main/res/layout/activity_weather_detail.xml
@@ -2,7 +2,6 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F8F9FB"
     android:layout_marginTop="50dp"
     android:layout_marginBottom="50dp"
     android:padding="16dp">
@@ -26,7 +25,7 @@
             android:id="@+id/textTempLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="기온"
+            android:text="날씨 설명"
             android:textSize="48sp"
             android:textStyle="bold"
             android:textColor="#111111"
@@ -54,27 +53,6 @@
             android:gravity="center"
             android:weightSum="4">
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:gravity="center">
-                <ImageView
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"/>
-                <TextView
-                    android:id="@+id/textWindSpeed"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="4.2 m/s"
-                    android:textSize="12sp" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="풍속"
-                    android:textSize="12sp" />
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -110,7 +88,6 @@
                     android:layout_height="32dp"
                     android:src="@drawable/ic_rainy" />
                 <TextView
-                    android:id="@+id/textRainProbability"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="보통"
@@ -130,7 +107,8 @@
                 android:gravity="center">
                 <ImageView
                     android:layout_width="32dp"
-                    android:layout_height="32dp" />
+                    android:layout_height="32dp"
+                    android:src="@drawable/ic_humidity"/>
                 <TextView
                     android:id="@+id/textHumidity"
                     android:layout_width="wrap_content"
@@ -144,6 +122,29 @@
                     android:textSize="12sp" />
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center">
+                <ImageView
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:src="@drawable/ic_wind"/>
+                <TextView
+                    android:id="@+id/textWindSpeed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="4.2 m/s"
+                    android:textSize="12sp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="풍속"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <!-- 시간대별 날씨 -->
@@ -153,8 +154,8 @@
             android:text="시간대별 날씨"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="8dp" />
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="10dp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerHourlyWeather"
@@ -163,8 +164,6 @@
             android:orientation="horizontal"
             android:nestedScrollingEnabled="false"
             android:overScrollMode="never"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="16dp"
             android:scrollbars="horizontal"/>
     </LinearLayout>
 </ScrollView>
