--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -14,12 +14,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="오늘 산책 어때요?"
-        android:textSize="30sp"
+        android:textSize="35sp"
         android:textStyle="bold"
-        android:padding="50dp"
+        android:padding="45dp"
         android:layout_gravity="center_horizontal"
-        android:fontFamily="@font/dangam_bold"
-        android:paddingBottom="24dp" />
+        android:fontFamily="@font/dangam_bold"/>
 
     <!-- 오늘의 날씨 -->
     <LinearLayout
@@ -28,8 +27,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="#FFFBD9"
-        android:padding="16dp"
-        android:layout_marginBottom="16dp"
+        android:padding="20dp"
+        android:layout_margin="18dp"
         android:elevation="4dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginHorizontal="8dp"
@@ -41,15 +40,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="오늘의 날씨"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:fontFamily="@font/dangam"
             android:textStyle="bold" />
 
 
         <ImageView
             android:id="@+id/imageWeatherIcon"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginVertical="8dp"
             android:src="@drawable/ic_weather_unknown" />
 
@@ -58,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="기온"
-            android:textSize="14sp" />
+            android:textSize="17sp" />
     </LinearLayout>
 
     <!-- 현재 상태 -->
@@ -67,8 +66,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="#FFFBD9"
-        android:padding="16dp"
-        android:layout_marginBottom="16dp"
+        android:padding="20dp"
+        android:layout_margin="18dp"
         android:elevation="4dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginHorizontal="8dp">
@@ -93,12 +92,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="#FFFBD9"
-        android:padding="16dp"
-        android:elevation="4dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginHorizontal="8dp">
+        android:layout_margin="18dp"
+        android:background="#FFFBD9"
+        android:elevation="4dp"
+        android:orientation="vertical"
+        android:padding="20dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -111,8 +110,8 @@
             android:id="@+id/textWalkTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="산책 시간:"
             android:layout_marginTop="8dp"
+            android:text="산책 시간:"
             android:textSize="14sp" />
 
         <TextView
