--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -18,7 +18,8 @@
         android:textStyle="bold"
         android:padding="45dp"
         android:layout_gravity="center_horizontal"
-        android:fontFamily="@font/dangam_bold"/>
+        android:fontFamily="@font/dangam_bold"
+        android:textColor="#383838"/>
 
     <!-- 오늘의 날씨 -->
     <LinearLayout
@@ -57,7 +58,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="기온"
-            android:textSize="17sp" />
+            android:fontFamily="@font/dangam"
+            android:textSize="17sp"
+            android:textStyle="bold"/>
     </LinearLayout>
 
     <!-- 현재 상태 -->
@@ -77,7 +80,8 @@
             android:layout_height="wrap_content"
             android:text="현재 상태"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:fontFamily="@font/dangam" />
 
         <TextView
             android:id="@+id/textStayTime"
@@ -85,7 +89,8 @@
             android:layout_height="wrap_content"
             android:text="지금 한 장소에서\n_ 시간 머물러 있어요"
             android:layout_marginTop="8dp"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:fontFamily="@font/dangam"/>
     </LinearLayout>
 
     <!-- 오늘의 산책 -->
@@ -104,7 +109,8 @@
             android:layout_height="wrap_content"
             android:text="오늘의 산책"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:fontFamily="@font/dangam"/>
 
         <TextView
             android:id="@+id/textWalkTime"
@@ -112,14 +118,16 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="산책 시간:"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:fontFamily="@font/dangam"/>
 
         <TextView
             android:id="@+id/textWalkDistance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="산책 거리:"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:fontFamily="@font/dangam"/>
     </LinearLayout>
 
 </LinearLayout>
