--- a/app/src/main/res/layout/activity_weather_detail.xml
+++ b/app/src/main/res/layout/activity_weather_detail.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="50dp"
+    android:layout_marginTop="80dp"
     android:layout_marginBottom="50dp">
 
     <LinearLayout
@@ -34,6 +34,7 @@
             android:gravity="center_horizontal" />
 
         <ImageView
+            android:id="@+id/imageWeather"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_marginBottom="15dp"
