--- a/app/src/main/res/layout/fragment_walk.xml
+++ b/app/src/main/res/layout/fragment_walk.xml
@@ -28,15 +28,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="산책을 시작하시겠어요?"
-                android:textSize="18sp"
+                android:textSize="19sp"
                 android:textStyle="bold"
                 android:textColor="#333333"
+                android:fontFamily="@font/dangam"
                 android:layout_margin="15dp" />
 
             <Button
                 android:id="@+id/startButton"
                 android:text="시작하기"
                 android:padding="10dp"
+                android:fontFamily="@font/dangam"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#FFF3BF"
@@ -48,9 +51,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+<!--        android:visibility="gone"-->
         <LinearLayout
             android:id="@+id/walkCard"
-            android:visibility="gone"
             android:orientation="vertical"
             android:padding="10dp"
             android:layout_width="270dp"
@@ -72,7 +75,9 @@
                     android:gravity="center"
                     android:text="10:05"
                     android:textColor="#FFFFFF"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/dangam"/>
 
                 <TextView
                     android:id="@+id/distanceText"
@@ -82,7 +87,9 @@
                     android:gravity="center"
                     android:text="1km"
                     android:textColor="#FFFFFF"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/dangam"/>
             </LinearLayout>
 
             <!-- 2행: 산책 중 -->
@@ -92,6 +99,8 @@
                 android:text="산책 중 .."
                 android:textColor="#FFFFFF"
                 android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="@font/dangam"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="15dp"/>
 
@@ -107,12 +116,15 @@
                     android:layout_height="wrap_content"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
-                    android:paddingStart="10dp"
-                    android:paddingEnd="10dp"
-                    android:paddingTop="4dp"
-                    android:paddingBottom="4dp"
-                    android:textSize="13sp"
+                    android:paddingStart="12dp"
+                    android:paddingEnd="12dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:layout_marginRight="3dp"
+                    android:textSize="14sp"
                     android:text="중단"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/dangam"
                     android:backgroundTint="#FFF3BF"
                     android:textColor="#000000" />
             </LinearLayout>
