--- a/app/src/main/res/layout/fragment_walk.xml
+++ b/app/src/main/res/layout/fragment_walk.xml
@@ -51,9 +51,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-<!--        android:visibility="gone"-->
         <LinearLayout
             android:id="@+id/walkCard"
+            android:visibility="gone"
             android:orientation="vertical"
             android:padding="10dp"
             android:layout_width="270dp"
