--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -102,7 +102,7 @@
             android:textSize="15sp"
             android:fontFamily="@font/dangam"
             android:textColor="#383838"
-            android:backgroundTint="#f7f7f6"
+            android:backgroundTint="#fffaad"
             android:layout_marginTop="12dp"
             android:layout_marginBottom="4dp"
             android:paddingHorizontal="18dp"
